# larql

./: AGENTS.md  Cargo.toml  Makefile  README.md  ROADMAP.md  ROADMAP_STATUS.md  UPSTREAM_PRS.md
.github/: dependabot.yml
.github/workflows/: bench-regress.yml  larql-boundary.yml  larql-cli.yml  larql-compute-metal.yml  larql-compute.yml  larql-models.yml  larql-server.yml  larql-vindex.yml
bench/aim-validation/: ave_demo_gemma3-4b.json  ave_stream_trigger_gemma3-4b.json  fr1_topk_router_gemma3-4b.json  fr2_two_tier_router_gemma3-4b.json  fr3_relation_address_gemma3-4b.json  v1_gemma3-4b.json  v1_llama2-7b.json  v1_mistral-7b.json  v1moe_gemma4-26b-a4b-q4k.json  v2_gemma3-4b_scan.json  v2_granite-4.1-3b-f16_scan.json  v2_granite-4.1-8b-f16_scan.json  v3_granite-30b.json
bench/aim-validation/moe-routing/: analyze.py  v3moe_locality.json
bench/baselines/: c10_gemma3-4b_cpu.json  c10_gemma3-4b_cpu_reconciled.json  c10_gemma3-4b_cpu_vs_llamacpp.json  c10_gemma4-26b-a4b_cpu_RUNBOOK.md
crates/kv-cache-benchmark/examples/: bit_budget_additivity_q4k.rs  patch_propagation_q4k.rs
crates/larql-cli/: Cargo.toml  ROADMAP.md
crates/larql-cli/src/: anyres_tiler.rs  image_input.rs  main.rs
crates/larql-cli/src/commands/dev/ov_rd/: edit_catalog.rs  metal_backend.rs  oracle.rs  oracle_pq.rs  oracle_pq_forward.rs  pq_exception.rs  probe_program_class.rs  sanity.rs  static_replace.rs  zero_ablate.rs
crates/larql-cli/src/commands/dev/ov_rd/eval_program/: mod.rs
crates/larql-cli/src/commands/dev/ov_rd/induce_program/: capture.rs
crates/larql-cli/src/commands/diagnostics/: parity.rs
crates/larql-cli/src/commands/extraction/: convert_cmd.rs  extract_index_cmd.rs  walk_cmd.rs
crates/larql-cli/src/commands/primary/: accuracy_cmd.rs  cache.rs  mod.rs  run_cmd.rs  run_cmd_image.rs  shannon_cmd.rs
crates/larql-cli/src/commands/primary/bench/: args.rs  local.rs  local_moe_runtime.rs  local_runtime.rs  mod.rs  ollama.rs  remote_ffn_runtime.rs  run.rs
crates/larql-cli/tests/: multimodal_e2e.rs
crates/larql-cloud/: Cargo.toml
crates/larql-cloud/src/: bedrock.rs  lib.rs  openai.rs  types.rs
crates/larql-cloud/tests/: proxy_integration.rs
crates/larql-compute/: Cargo.toml  README.md  ROADMAP.md  coverage-policy.json
crates/larql-compute-metal/: coverage-policy.json
crates/larql-compute-metal/examples/: compare_pipeline.rs
crates/larql-compute-metal/src/: lib.rs  pipeline.rs
crates/larql-compute-metal/tests/: test_decode_diag.rs  test_kernel_moe_expert_dispatch.rs  test_metal_decode_synthetic.rs
crates/larql-compute/benches/: q4k_q8k_matvec.rs
crates/larql-compute/docs/: q4k-decode-kernel.md
crates/larql-compute/examples/: attn_prefill_f32_vs_q4k.rs  attn_proj_f32_vs_q4k.rs  attn_proj_vs_gqa_split.rs
crates/larql-compute/src/: lib.rs  options.rs  pipeline.rs  pipeline_layer.rs
crates/larql-core/: ROADMAP.md
crates/larql-inference/: CHANGELOG.md  Cargo.toml  ROADMAP.md
crates/larql-inference/examples/: ave_demo.rs  ave_q4k_row_audit.rs  ave_stream_trigger_probe.rs  build_down_features_q4k.rs  decode_vs_prefill.rs  fr1_topk_fuzzy_router.rs  fr2_two_tier_router.rs  fr3_relation_address.rs  fr_early_exit_bench.rs  fr_early_exit_parity.rs  fr_early_exit_probe.rs  fr_routing_gain.rs  mech_interp_demo.rs  q4k_remote_parity.rs  residual_diff.rs  scanner_adversarial.rs  walk_ffn_accuracy.rs  walk_ffn_cell_router.rs  walk_ffn_decode_timing.rs  walk_ffn_delta_walk.rs  walk_ffn_drift.rs  walk_ffn_gather_gemm.rs  walk_ffn_graded_precision.rs  walk_ffn_k_agreement.rs  walk_ffn_microbench.rs  walk_ffn_nll.rs  walk_ffn_temporal_reuse.rs  walk_ffn_v1_hash_routing.rs  walk_ffn_v1_moe_within_expert.rs  walk_ffn_v2_fp4_nll.rs
crates/larql-inference/src/: decode_stages.rs  kv_engine.rs  lib.rs  ternary.rs  test_utils.rs
crates/larql-inference/tests/: test_constrained_dispatch.rs  test_cpu_v_projection.rs  test_decode_consistency.rs  test_generate_q4k_cpu.rs  test_layer_graph_integration.rs  test_llm_dispatch.rs  test_logits_goldens.rs  test_q4k_cached_parity.rs  test_trie_dispatch.rs
crates/larql-kv/: Cargo.toml  ROADMAP.md  coverage-policy.json
crates/larql-kv/benches/: engine_decode.rs
crates/larql-kv/examples/: engine_ladder.rs  vindex_compare.rs
crates/larql-kv/src/: cache.rs  generation.rs  lib.rs
crates/larql-kv/src/engines/: mod.rs  no_cache.rs  standard.rs
crates/larql-kv/src/engines/boundary_kv/: engine.rs
crates/larql-kv/src/engines/boundary_per_layer/: dispatch.rs  engine.rs  walk.rs
crates/larql-kv/src/engines/markov_residual/: compute.rs  dispatch.rs  engine.rs  walk.rs
crates/larql-kv/src/engines/markov_residual_codec/: compute.rs  dispatch.rs  engine.rs  walk.rs
crates/larql-kv/src/engines/turbo_quant/: engine.rs
crates/larql-kv/src/engines/unlimited_context/: dispatch.rs  engine.rs  extend.rs
crates/larql-kv/tests/: dispatch_parity.rs
crates/larql-lql/: README.md  ROADMAP.md  coverage-policy.json
crates/larql-lql/docs/: spec.md
crates/larql-lql/examples/: compile_demo.rs  parser_demo.rs  refine_demo.rs  trace_demo.rs
crates/larql-lql/src/: ast.rs  lexer.rs  relations.rs
crates/larql-models/: ROADMAP.md  coverage-policy.json
crates/larql-python/: Cargo.toml
crates/larql-router/: README.md  ROADMAP.md
crates/larql-server/: CHANGELOG.md  ROADMAP.md  coverage-policy.json
crates/larql-vindex/: ROADMAP.md  coverage-policy.json
docs/: fleet-routing-extensions.md  lql-guide.md  positioning.md
docs/adr/: 0021-hedged-dispatch.md  0023-multimodal-engine-seam.md
docs/audits/: codebase-review-2026-05-28.md
docs/diagnoses/: fr-routing-gain.md  fr1-topk-fuzzy-router.md  fr2-two-tier-router.md  fr3-relation-address.md  moe-routing-locality.md  q4k-direct-attention.md  remote-moe-bottlenecks.md  v1-hash-routing.md  v1-moe-within-expert.md  v2-fp4-generality.md  v3-disk-resident-mmap.md  walk-ffn-performance.md
knowledge/scripts/: probe_extended_relations_pilot.py  probe_mlx.py  probe_multilingual_pilot.py  probe_subword_pilot.py
nix/: package.nix
nix/patches/: use-system-protoc.patch
scripts/: bench-regress.sh
(+200 files in other folders)
