[package]
name = "larql-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for LARQL knowledge graph extraction and querying"

[[bin]]
name = "larql"
path = "src/main.rs"

[dependencies]
larql-core = { path = "../larql-core" }
larql-compute = { path = "../larql-compute" }
larql-compute-metal = { path = "../larql-compute-metal", optional = true }
larql-inference = { path = "../larql-inference" }
larql-kv = { path = "../larql-kv" }
larql-models = { path = "../larql-models" }
larql-lql = { path = "../larql-lql" }
larql-vindex = { path = "../larql-vindex" }
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
tokenizers = "0.21"
safetensors = "0.7"
memmap2 = "0.9"
ndarray = "0.16"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
minijinja = "2"
libc = "0.2"
rayon = "1.10"
# Multi-modal Phase 1d: image decode + bicubic resize for the `--image` flag.
# Pruned features — we only need JPEG/PNG/WebP. Skipping TIFF/AVIF/HDR/etc
# avoids dragging in libavif, libtiff, openexr, and a 2 MB binary tax.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[features]
default = ["gpu"]
gpu = [
    "dep:larql-compute-metal",
    "larql-inference/gpu",
    "larql-kv/gpu",
    "larql-vindex/gpu",
]

[dev-dependencies]
tempfile = "3"
# `test-utils` exposes `larql_models::test_fixtures::make_test_weights`,
# used by run_cmd_image tests to borrow a real ModelConfig without
# enumerating every field by hand. Production builds don't compile it.
larql-models = { path = "../larql-models", features = ["test-utils"] }
