[package]
name = "larql-cloud"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Outbound LLM clients (OpenAI-compatible, AWS Bedrock) for larql-server proxy mode"

[features]
default = ["openai", "bedrock"]
openai = []
bedrock = ["dep:hmac", "dep:sha2", "dep:hex"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "macros"] }
tracing = "0.1"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", default-features = false, features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", default-features = false, features = ["client", "client-legacy", "tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"

[lints.clippy]
unwrap_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
